--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -21,4 +21,16 @@ input {
 button {
   padding: 8px 12px;
   cursor: pointer;
+}
+
+.liClass {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.imgClass {
+  border: 10px solid rgb(190, 33, 33);
+  border-radius: 30px;
+  max-width: 350px;
 }
